course03/chapter05/default-deny-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: netpol-test-ns-a
spec:
  podSelector: {}
  policyTypes:
  - Ingress
