course03/chapter05/network-policy-apply.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: netpol-test-ns-a
spec:
  podSelector:
    matchLabels:
      app: netpol-test-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: netpol-test-client
          namespaceSelector:
            matchLabels:
              team: bteam
      # ports:
      #   - protocol: TCP
      #     port: 80
